Bug 333702 - Group chats no longer show who is typing in the sidepanel
Summary: Group chats no longer show who is typing in the sidepanel
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-21 22:51 UTC by David Edmundson
Modified: 2014-05-13 14:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2014-04-21 22:51:17 UTC
Group chats no longer show who is typing in the sidepanel. The avatar used to be replaced by an icon of a penciel.

I imagine David broke this when he copied and pasted the old delegates across from the contact list.
Comment 1 David Edmundson 2014-05-13 14:19:44 UTC
Git commit aec2fa2db6c09efcbccd99340e6aa2c297bcaca4 by David Edmundson.
Committed on 13/05/2014 at 14:17.
Pushed by davidedmundson into branch 'master'.

Restore showing who is typing in the group chat participants

REVIEWED-BY: Martin Klapetek

M  +3    -0    lib/channel-contact-model.cpp
M  +6    -0    lib/channel-contact-model.h
M  +9    -1    lib/contact-delegate.cpp

http://commits.kde.org/telepathy-text-ui/aec2fa2db6c09efcbccd99340e6aa2c297bcaca4