Restore showing who is typing in the group chat participants

REVIEWED-BY: Martin Klapetek
BUG: 333702